--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,50 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/favicon-v4.ico" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/inter-400.woff2">
+    <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/inter-600.woff2">
+    <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/roboto-500.woff2">
+    <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/roboto-700.woff2">
+    <style>
+        @font-face {
+            font-family: 'inter';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(fonts/inter-400.woff2) format('woff2');
+        }
 
+        @font-face {
+            font-family: 'inter';
+            font-style: normal;
+            font-weight: 600;
+            font-display: swap;
+            src: url(fonts/inter-600.woff2) format('woff2');
+        }
+
+        @font-face {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 500;
+            font-display: swap;
+            src: url(fonts/roboto-500.woff2) format('woff2');
+        }
+
+        @font-face {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 700;
+            font-display: swap;
+            src: url(fonts/roboto-700.woff2) format('woff2');
+        }
+    </style>
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -81,7 +117,7 @@
     <div class="container-fluid p-0 pb-5">
         <div class="owl-carousel header-carousel position-relative mb-5">
             <div class="owl-carousel-item position-relative">
-                <img class="lozad img-fluid" data-src="img/carousel-1.jpg" alt=""  fetchpriority="high" decoding="async">
+                <img class="lozad img-fluid" data-src="img/carousel-1.jpg" alt="" fetchpriority="high" decoding="async">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
