--- a/public/index.html
+++ b/public/index.html
@@ -12,51 +12,19 @@
     <link href="img/favicon-v4.ico" rel="icon">
 
     <!-- Google Web Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet"> -->
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/inter-400.woff2">
     <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/inter-600.woff2">
     <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/roboto-500.woff2">
     <link as="font" crossorigin="" rel="preload" type="font/woff2" href="fonts/roboto-700.woff2">
     <style>
-        @font-face {
-            font-family: 'inter';
-            font-style: normal;
-            font-weight: 400;
-            font-display: swap;
-            src: url(fonts/inter-400.woff2) format('woff2');
-        }
-
-        @font-face {
-            font-family: 'inter';
-            font-style: normal;
-            font-weight: 600;
-            font-display: swap;
-            src: url(fonts/inter-600.woff2) format('woff2');
-        }
-
-        @font-face {
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 500;
-            font-display: swap;
-            src: url(fonts/roboto-500.woff2) format('woff2');
-        }
-
-        @font-face {
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 700;
-            font-display: swap;
-            src: url(fonts/roboto-700.woff2) format('woff2');
-        }
+       @font-face{font-family:inter;font-style:normal;font-weight:400;font-display:swap;src:url(fonts/inter-400.woff2) format('woff2')}@font-face{font-family:inter;font-style:normal;font-weight:600;font-display:swap;src:url(fonts/inter-600.woff2) format('woff2')}@font-face{font-family:Roboto;font-style:normal;font-weight:500;font-display:swap;src:url(fonts/roboto-500.woff2) format('woff2')}@font-face{font-family:Roboto;font-style:normal;font-weight:700;font-display:swap;src:url(fonts/roboto-700.woff2) format('woff2')}
     </style>
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap-icon.css">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -549,7 +517,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/team-3.jpg" alt="">
+                            <img class="lozad img-fluid" data-src="img/team-3.jpg" alt="" width="264" height="264">
                         </div>
                         <h5 class="mb-0">Full Name</h5>
                         <p>Designation</p>
