--- a/public/index.html
+++ b/public/index.html
@@ -483,7 +483,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="lozad img-fluid" data-src="img/team-1.jpg" alt="">
+                            <img class="lozad img-fluid" data-src="img/team-1.jpg" alt="" width="400" height="400">
                         </div>
                         <h5 class="mb-0">Full Name</h5>
                         <p>Designation</p>
@@ -500,7 +500,8 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="lozad img-fluid" data-src="img/team-2.jpg" alt="">
+                            <img class="lozad img-fluid" data-src="img/team-2.jpg" alt="" width="400"
+                            height="400">
                         </div>
                         <h5 class="mb-0">Full Name</h5>
                         <p>Designation</p>
