--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
     <div class="container-fluid p-0 pb-5">
         <div class="owl-carousel header-carousel position-relative mb-5">
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-1.webp" alt="" fetchpriority="high" decoding="async">
+                <img class="img-fluid" src="img/carousel-1.webp" alt="" fetchpriority="high" decoding="async" width="1519" height="855">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="lozad img-fluid" data-src="img/carousel-2.jpg" alt="">
+                <img class="lozad img-fluid" data-src="img/carousel-2.jpg" alt="" width="1519" height="855">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                     style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
