--- a/public/index.html
+++ b/public/index.html
@@ -596,7 +596,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="about-start container">
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
