--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
                 <img class="img-fluid" src="img/carousel-1.webp" alt="" fetchpriority="high" decoding="async" width="1519" height="855">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                     style="background: rgba(6, 3, 21, .5);">
-                    <div class="about-start container">
+                    <div class="carousel-height container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Transport & Logistics
