--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
     <!-- About Start -->
     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container about py-5 px-lg-0">
-            <div class="about-start row g-5 mx-lg-0">
+            <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="lozad  position-absolute img-fluid w-100 h-100" data-src="img/about.jpg"
